# Store_intelligent_system

./: .coverage  .dockerignore  .env.example  Dockerfile  PRESENTATION.md  README.md  alembic.ini  docker-compose.yml  how_to_start.txt  nginx.conf  pyproject.toml  requirements-cv.txt  requirements.txt  test_conn.py  test_latest.py
app/: __init__.py  main.py  schemas.py
app/core/: __init__.py  config.py  dataset_config.py  exceptions.py  logging.py
app/db/: __init__.py  models.py  repositories.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_create_retail_events.py
app/routes/: anomalies.py  dashboard.py  funnel.py  health.py  ingest.py  metrics.py
app/services/: anomaly_schemas.py  anomaly_service.py  funnel_schemas.py  funnel_service.py  ingestion_service.py  metrics_schemas.py  metrics_service.py  websocket_service.py
artifacts/dataset_probe/: video_metadata.json
artifacts/events/: brigade_events.jsonl  store1_events.jsonl  store2_events.jsonl
dashboard/static/css/: dashboard.css
dashboard/static/js/: dashboard.js
dashboard/templates/: index.html
docs/: CHOICES.md  DESIGN.md
pipeline/: __init__.py  config.py  dataset_runner.py  detect.py  emit.py  event_builder.py  factories.py  reid.py  run.py  schemas.py  simulator.py  tracker.py  video.py  zones.py
tests/: __init__.py  fakes.py  test_anomalies.py  test_dashboard.py  test_dataset_config.py  test_funnel.py  test_health.py  test_ingest.py  test_jsonl_ingestion.py  test_metrics.py  test_pipeline.py  test_real_video_pipeline.py  test_repository_models.py
