[project]
name = "store-intelligence"
version = "0.1.0"
description = "Dataset-agnostic store intelligence platform for CCTV-to-analytics pipelines."
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "structlog>=24.1.0",
    "torch>=2.6.0",
    "torchreid>=0.2.5",
    "torchvision>=0.22.0",
    "ultralytics>=8.2.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov=pipeline --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py313"
